--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
         
         <section id="about" class="py-5">
             <h2>About Me</h2>
-            <p>Hi, I'm Satheesh Vadla, a passionate Full Stack Developer with hands-on experience in building real-world applications using the MERN stack. I recently completed an E-commerce Food Delivery app called SpiceZone.</p>
+            <p>
+
+
+Hi, I'm Satheesh Vadla, a passionate and enthusiastic Full Stack Developer with hands-on experience in building real-world applications using the MERN stack. I recently completed an E-commerce Food Delivery app called SpiceZone, which includes user and admin dashboards, full CRUD operations, authentication, and even integrates AWS S3 for storage.
+
+Though I'm a fresher, I’ve built multiple projects that reflect my understanding of frontend and backend development. I enjoy learning new technologies, solving problems, and working in teams. Currently, I'm exploring cloud technologies, React, and advanced JavaScript practices.
+
+I believe in growing through real-world experience and am excited to contribute to impactful tech solutions!
+
+</p>
         </section>
     </div>
 
