--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                     
                     <!-- Web URL Blocks -->
                     <div class="nav-item-block linkedin-block">
-                        <a class="nav-link-block" href="https://linkedin.com/in/yourprofile" target="_blank">
+                        <a class="nav-link-block" href="https://www.linkedin.com/in/satheesh-vadla-aa7027255/" target="_blank">
                             <i class="fab fa-linkedin"></i> LinkedIn
                         </a>
                     </div>
                     <div class="nav-item-block github-block">
-                        <a class="nav-link-block" href="https://github.com/yourusername" target="_blank">
+                        <a class="nav-link-block" href="https://github.com/Vsatheesh526" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
                     </div>
